--- a/wrong.html
+++ b/wrong.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>repl.it</title>
-	<link href="style.css" rel="stylesheet" type="text/css" />
+	<link href="minigame.css" rel="stylesheet" type="text/css" />
 </head>
-
 <body>
 	<header>How Rare is the Word</header>
-	<h2>Which word is the rarest per million?</h2>
-
+	<h2>Which word is the rarest?</h2>
 	<h2>INCORRECT...</h2>
 <button onclick="retry()">Try Again</button>
-
     <script >
 		 function retry(){
-			window.location.href = ("index.html");
+			window.location.href = ("minigame.html");
   }
 	</script>
 </body>
