--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
         <option value="noun">noun</option>
         <option value="adjective">adjective</option>
       </select>
+      <!-- This button activates the "findword" function -->
       <br><br><button onclick="console.log(findWord())">Find the most commmon word</button><br>
-        <div class="outputBox" id="outputBox">
-        <p id="output"></p>
+        <div class="outputBox" id="outputBox"></p>
     </div>
 
 
 </body>
 </html>
+<!-- when the MiniGame butten is clicked the funciton "game" activates -->
 <button id="minigame" onclick="game()">Mini Game</button>
 
 
