--- a/wrong.html
+++ b/wrong.html
@@ -10,6 +10,7 @@
 	<header>How Rare is the Word</header>
 	<h2>Which word is the rarest?</h2>
 	<h2>INCORRECT...</h2>
+	<!-- When the "retry" button is pressed the "retry" function sends you to a selected html -->
 <button onclick="retry()">Try Again</button>
     <script >
 		 function retry(){
