--- a/correct.html
+++ b/correct.html
@@ -15,6 +15,6 @@
 <script>
 	// The "changefLocation" function takes your desired location in as a parameter, and then executes code that changes your html.
 function changefLocation(location){
-window.location.href = (location)}''
+window.location.href = (location)}
 </script>
 </html>
